Bump the memory allocation for the old vs new Java perf test.