@@ -16,11 +16,18 @@
 
 package org.gradle.performance
 
+import org.gradle.performance.fixture.BuildExperimentSpec
 import org.junit.experimental.categories.Category
 import spock.lang.Unroll
 
 @Category(Experiment.class)
 class OldVsNewJavaPluginPerformanceTest extends AbstractCrossBuildPerformanceTest {
+
+    @Override
+    protected void defaultSpec(BuildExperimentSpec.Builder builder) {
+        builder.invocation.gradleOpts("-Xmx1024m", "-XX:MaxPermSize=256m")
+        super.defaultSpec(builder)
+    }
 
     @Unroll
     def "#size project old vs new java plugin #scenario build"() {
